NLP TP's/texts/robotics/robotics.stackexchange_0000039654.txt
Q:

Syntax errors on pip install on gentoo

Hi, I am trying to install ROS on a 64-bit machine running Gentoo linux. When I run the command -
sudo pip install -U rosinstall vcstools

I get the following errors -
Installing collected packages: rosinstall, vcstools, pyyaml
  Found existing installation: rosinstall 0.6.13
Uninstalling rosinstall:
  Successfully uninstalled rosinstall
  Running setup.py install for rosinstall
changing mode of build/scripts-3.2/rosinstall from 644 to 755
changing mode of build/scripts-3.2/roslocate from 644 to 755
changing mode of build/scripts-3.2/rosws from 644 to 755
changing mode of build/scripts-3.2/rosco from 644 to 755
  File "/usr/lib64/python3.2/site-packages/rosinstall/config_elements.py", line 96
    raise NotImplementedError, "ConfigElement install unimplemented"
                             ^
SyntaxError: invalid syntax

changing mode of /usr/bin/rosws to 755
changing mode of /usr/bin/roslocate to 755
changing mode of /usr/bin/rosco to 755
changing mode of /usr/bin/rosinstall to 755
  Found existing installation: vcstools 0.1.15
Uninstalling vcstools:
  Successfully uninstalled vcstools
  Running setup.py install for vcstools
  File "/usr/lib64/python3.2/site-packages/vcstools/git.py", line 233
    print "vcstools refusing to move away from dangling commit, to protect your work."
                                                                                     ^
SyntaxError: invalid syntax

  File "/usr/lib64/python3.2/site-packages/vcstools/vcs_base.py", line 194
    raise NotImplementedError, "Base class get_version method must be overridden"
                             ^
SyntaxError: invalid syntax

  Found existing installation: PyYAML 3.10
Uninstalling PyYAML:
  Successfully uninstalled PyYAML
  Running setup.py install for pyyaml
checking if libyaml is compilable
x86_64-pc-linux-gnu-gcc -pthread -fPIC -I/usr/include/python3.2 -c build/temp.linux-x86_64-3.2/check_libyaml.c -o build/temp.linux-x86_64-3.2/check_libyaml.o
build/temp.linux-x86_64-3.2/check_libyaml.c:2:18: fatal error: yaml.h: No such file or directory
compilation terminated.

libyaml is not found or a compiler error: forcing --without-libyaml
(if libyaml is installed correctly, you may need to
 specify the option --include-dirs or uncomment and
 modify the parameter include_dirs in setup.cfg)

But then at the bottom it says "Successfully installed rosinstall vcstools pyyaml". So I try to move on to
rosinstall ~/ros "http://packages.ros.org/cgi-bin/gen_rosinstall.py?rosdistro=electric&variant=desktop-full&overlay=no"

but that gives me an error saying there is no module 'headers'. I'm assuming the issue with pip install is the problem. I have gone into the config_elements.py file, removed the ',' causing the syntax error, and tried to pip install again...but it just recreated the file with the syntax error.
I would greatly appreciate it if someone could tell me if they know what is wrong. Thanks.

Originally posted by sterlingm on ROS Answers with karma: 380 on 2012-04-17
Post score: 0

A:

It seems like Gentoo, similar to Arch, uses python3 per default. I'm not sure if there is a version of pip that uses python2 in Gentoo, but alternatively you should be able to install rosinstall similar to how the Arch rosinstall package does it. Have a look at the tarball linked on this page.

Originally posted by Lorenz with karma: 22731 on 2012-04-17
This answer was ACCEPTED on the original site
Post score: 1

